--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 aside {
-    border: 3px solid red;
+    border: 3px solid lightgray;
 }
 #history {
     border: 3px dashed yellow;
@@ -11,4 +11,34 @@ aside {
 
 #forecast {
     border: 3px dotted green;
+}
+
+
+/*Header*/
+.weather-header{
+    background: rgb(136,195,237);
+    background: linear-gradient(90deg, rgba(136,195,237,1) 0%, rgba(51,130,187,1) 22%, rgba(51,98,187,1) 50%, rgba(32,9,76,1) 100%);
+}
+
+/*Search area*/
+
+.h2-heading{
+    font-size: 2.7rem;
+}
+
+#search-input {
+    border-radius: 0.6rem;
+    width: 100%;
+    height: 4rem;
+    font-size: 2rem;
+}
+
+#search-button {
+    width: 100%;
+    height: 3rem;
+    border: 2px solid rgba(0, 0, 255, 0.138);
+    background-color: #5098e6;
+    color: white;
+    border-radius: 0.6rem;
+    font-size: 1.5rem;
 }
