--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,9 +36,20 @@ aside {
 #search-button {
     width: 100%;
     height: 3rem;
-    border: 2px solid rgba(0, 0, 255, 0.138);
+    border: 2px solid #81b4ed;
     background-color: #5098e6;
     color: white;
+    border-radius: 0.6rem;
+    font-size: 1.5rem;
+}
+
+/*History area*/
+.city-button {
+    width: 100%;
+    height: 3rem;
+    border: 2px solid #d0d0d0;
+    background-color: #aeaeae;
+    color: black;
     border-radius: 0.6rem;
     font-size: 1.5rem;
 }
