--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,4 +56,6 @@ aside {
     /* TODO: should be dynamically added in createCityBtn() */
     margin-top: 1rem;
     margin-bottom: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 3.5rem;
 }
