✨ Implement displayTodayWeather() function to populate today's section based on currentWeather API call response

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,3 +59,14 @@ aside {
     padding-top: 1rem;
     padding-bottom: 3.5rem;
 }
+
+/*Today's Section*/
+/*this can be replaced with a JS function*/
+button::first-letter, h2::first-letter {
+    text-transform:capitalize;
+}
+
+#today>p {
+    font-size: 1.5rem;   
+}
+
