--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,16 +5,22 @@ aside {
     border: 3px dashed yellow;
 }
 
-#today {
-    border: 3px dotted skyblue;
-}
 
 #forecast {
     border: 3px dotted green;
 }
 
 
+
+/*Global*/
+
+/*this can be replaced with a JS function*/
+button::first-letter, h2::first-letter {
+    text-transform:capitalize;
+}
+
 /*Header*/
+
 .weather-header{
     background: rgb(136,195,237);
     background: linear-gradient(90deg, rgba(136,195,237,1) 0%, rgba(51,130,187,1) 22%, rgba(51,98,187,1) 50%, rgba(32,9,76,1) 100%);
@@ -44,6 +50,7 @@ aside {
 }
 
 /*History area*/
+
 .city-button {
     width: 100%;
     height: 3rem;
@@ -61,12 +68,12 @@ aside {
 }
 
 /*Today's Section*/
-/*this can be replaced with a JS function*/
-button::first-letter, h2::first-letter {
-    text-transform:capitalize;
+
+#today {
+    border: 1px solid black;
 }
 
-#today>p {
+#today > p {
     font-size: 1.5rem;   
 }
 
