--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,3 @@
-aside {
-    border: 3px solid lightgray;
-}
-#history {
-    border: 3px dashed yellow;
-}
-
-
-#forecast {
-    border: 3px dotted green;
-}
-
-
-
 /*Global*/
 
 /*this can be replaced with a JS function*/
@@ -69,11 +55,18 @@ button::first-letter, h2::first-letter {
 
 /*Today's Section*/
 
-#today {
+.today-style {
     border: 1px solid black;
+    padding: 3rem;
 }
 
 #today > p {
     font-size: 1.5rem;   
 }
 
+/*Forecast section*/
+
+#forecast {
+    padding: 3rem;
+    border: 1px solid #81b4ed;
+}
