Implement all functions related to localStorage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,3 +79,7 @@ button::first-letter, h2::first-letter {
 #forecast-heading{
     border: 2px solid orange;
 }
+
+.dayDiv {
+    border: 1px solid burlywood;
+}
