--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,9 +70,15 @@ aside {
 
 /*Today's Section*/
 
+#today{
+    width: 100%;
+    margin: auto;
+    padding: 1rem;
+    border-radius: 0.6rem;
+}
+
 .today-style {
     border: 0.2rem solid #d0d0d0;
-    border-radius: 0.6rem; 
 }
 
 #today > p {
@@ -103,7 +109,7 @@ aside {
     margin: auto;
 }
 
-#today, #wrap {
+#wrap {
     margin: 1rem;
     padding: 1rem;
 }
