--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,10 @@ aside {
     font-size: 1.9rem;
 }
 
+#search-button:hover{
+    background-color: #509beae6
+}
+
 .hr {
     border: 0.1rem solid #d0d0d0;   
 }
